<resources>
    <string name="app_name">CalTip</string>
    <string name="txtLbl1">Total Amount</string>
    <string name="txtLbl2">No. Of People</string>
    <string name="txtLbl3">Tip Percentage:</string>
    <string name="rdoTxt15">15%</string>
    <string name="rdoTxt20">20%</string>
    <string name="rdoTxtOther">Other</string>
    <string name="btnReset">Reset</string>
    <string name="btnCalculate">Calculate</string>
    <string name="txtLbl4">Tip Amount</string>
    <string name="txtLbl5">Total To Pay</string>
    <string name="txtLbl6">Total Per Person</string>
</resources>