<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/TableLayout1"
    android:stretchColumns="1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow>
        <TextView
            android:id="@+id/txtLbl1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtLbl1"/>
        <EditText
            android:id="@+id/txtAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_column="2"
            android:layout_span="2"/>
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/txtLbl2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtLbl2"/>
        <EditText
            android:id="@+id/txtPeople"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_column="2"
            android:layout_span="2"/>
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/txtLbl3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtLbl3"/>
    </TableRow>

    <TableRow>
        <RadioGroup
            android:id="@+id/rdoGroupTips"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_span="2"
            android:checkedButton="@+id/radioFifteen">
            <RadioButton
                android:id="@+id/radioFifteen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rdoTxt15"
                android:textSize="15sp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioTwenty"
                android:text="@string/rdoTxt20"
                android:textSize="15sp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioOther"
                android:text="@string/rdoTxtOther"
                android:textSize="15sp"/>
        </RadioGroup>

        <EditText
            android:id="@+id/txtTipOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
    </TableRow>

    <TableRow>
        <Button
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:text="@string/btnReset"/>
        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:text="@string/btnCalculate"/>
    </TableRow>
    <View
        android:layout_height="2px"
        android:background="#DDFFDD"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <TableRow android:paddingBottom="10dp" android:paddingTop="5dp">
        <TextView
            android:id="@+id/txtLbl4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/txtLbl4"/>
        <TextView
            android:id="@+id/txtTipAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_span="2"/>
    </TableRow>

    <TableRow android:paddingTop="5dp" android:paddingBottom="10dp">
        <TextView
            android:id="@+id/txtLbl5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/txtLbl5"/>
        <TextView
            android:id="@+id/txtTotalToPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_span="2"/>
    </TableRow>

    <TableRow android:paddingBottom="10dp" android:paddingTop="5dp">
        <TextView
            android:id="@+id/txtLbl6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/txtLbl6"/>
        <TextView
            android:id="@+id/txtTipPerPerson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_span="2"/>
    </TableRow>
</TableLayout>